fix error due to unmutable list